Review feedback from Remi